k8s-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: praveenpeterjay2/mlops-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
      nodePort: 30001 # We fix this port so you know where to look
  type: NodePort # This opens the door to the outside world
  # comment added
